<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_25sdp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="?custom_blue_color"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:src="@drawable/ic_home_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="-10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/SemiBoldFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deletedd"
                android:textColor="?white_text_color"
                android:textSize="@dimen/_24ssp" />

            <TextView
                style="@style/RegularFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_recover"
                android:textColor="?white_text_color"
                android:textSize="@dimen/_18ssp" />

        </LinearLayout>

        <TextView
            style="@style/RegularFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_deleted_files_easily"
            android:textColor="?light_blue_text_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@id/l1"
            app:layout_constraintTop_toBottomOf="@id/l1" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@id/layout1">

        <LinearLayout
            android:id="@+id/images"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:src="@drawable/ic_images" />

            <TextView
                style="@style/RegularFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/images"
                android:textColor="?black_text_color"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/videos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:src="@drawable/ic_videos" />

            <TextView
                style="@style/RegularFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/videos"
                android:textColor="?black_text_color"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/audios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:src="@drawable/ic_audios" />

            <TextView
                style="@style/RegularFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/audios"
                android:textColor="?black_text_color"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/files"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:src="@drawable/ic_files" />

            <TextView
                style="@style/RegularFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/filess"
                android:textColor="?black_text_color"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/prolayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_margin="@dimen/_25sdp"
        android:background="@drawable/saved_rounded_bg"
        android:backgroundTint="?purchase_banner_bg_color"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/options">

        <ImageView
            android:id="@+id/piv"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/purchase"
            app:layout_constraintBottom_toBottomOf="@id/guideLine"
            app:layout_constraintEnd_toStartOf="@id/tv1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv1"
            style="@style/MediumFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?white_text_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/piv"
            app:layout_constraintEnd_toStartOf="@id/offer"
            app:layout_constraintStart_toEndOf="@id/piv"
            app:layout_constraintTop_toTopOf="@id/piv" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />


        <TextView
            android:id="@+id/offer"
            style="@style/RegularFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_bg"
            android:backgroundTint="?splash_button_bg_color"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_3sdp"
            android:text="@string/best_offer"
            android:textColor="?white_text_color"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="@id/piv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/piv" />


        <TextView
            android:id="@+id/tvPrice"
            style="@style/RegularFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:textColor="?white_text_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideLine" />

        <TextView
            android:id="@+id/tvMonth"
            style="@style/RegularFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textColor="?white_text_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideLine" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frameNative"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/options"
        app:layout_constraintStart_toStartOf="@id/options"
        app:layout_constraintTop_toBottomOf="@id/prolayout" />

    <LinearLayout
        android:id="@+id/adloadingscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main800"
        android:translationZ="@dimen/_8sdp"
        android:visibility="invisible">

        <include

            layout="@layout/ad_load_screen"

            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>