<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?bg_gradient"
    tools:context=".views.activities.ScanImagesActivity">

    <ImageView
        android:id="@+id/backIV"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/ic_back_icon"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:tint="?back_icon_tint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/backIV"
        app:layout_constraintBottom_toBottomOf="@id/backIV"
        android:text="@string/choose_language"
        android:textSize="@dimen/_18ssp"
        android:textColor="?black_text_color"
        style="@style/MediumFont"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/backIV"
        android:layout_margin="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:background="@drawable/choose_language_bg">

        <ImageView
            android:id="@+id/searchIV"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_search"
            android:tint="?search_icon_tint"
            android:padding="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
            android:id="@+id/searchED"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/find_a_language"
            android:background="@null"
            android:textColorHint="?black_text_color"
            android:textColor="?black_text_color"
            android:paddingHorizontal="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/searchIV"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/searchLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_15sdp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1"/>

    <TextView
        android:id="@+id/noTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/no_data_dound"
        android:textSize="@dimen/_14ssp"
        android:visibility="gone"
        android:textColor="?black_text_color"
        style="@style/MediumFont"/>
</androidx.constraintlayout.widget.ConstraintLayout>